Improve HTML markup of secondary navigation across the site.

--- a/gobotany/plantshare/templates/_plantshare_home_nav_item.html
+++ b/gobotany/plantshare/templates/_plantshare_home_nav_item.html
@@ -1,4 +1,2 @@
 {% load gobotany_tags %}
-    <div class="section plantshare">
-        <h4>{% nav_item 'PlantShare' ps-main %}</h4>
-    </div>
+    <li class="plantshare">{% nav_item 'PlantShare' ps-main %}</li>
