--- a/gobotany/plantshare/templates/_signup_nav_item.html
+++ b/gobotany/plantshare/templates/_signup_nav_item.html
@@ -1,4 +1,2 @@
 {% load gobotany_tags %}
-    <div class="section signup">
-        <h4>{% nav_item 'Sign Up for PlantShare' registration_register %}</h4>
-    </div>
+    <li class="signup">{% nav_item 'Sign Up for PlantShare' registration_register %}</li>
