--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -1,37 +1,17 @@
- {% load gobotany_tags %}
-    <div class="section help">
-        <h4>{% nav_item 'Help' site-help %}</h4>
-    </div>
-    <div class="section getting-started">
-        <h4>{% nav_item 'Getting Started with the Simple Key' site-getting-started %}</h4>
-    </div>
-    <div class="section video">
-        <h4>{% nav_item 'Video Help Topics' site-video %}</h4>
-    </div>
-    <div class="section advanced-map">
-        <h4>{% nav_item 'Advanced Map to Groups' site-advanced-map %}</h4>
-    </div>
-    <div class="section dkey">
-        <h4>{% nav_item "What’s a Dichotomous Key?" site-help-dkey %}</h4>
-    </div>
-    <div class="section glossary">
-        <h4>{% nav_item 'Glossary' site-glossary 'a' %}</h4>
-    </div>
-    <div class="section advanced-id-tools">
-        <h4>{% nav_item 'Advanced ID Tools' advanced-id-tools %}</h4>
-    </div>
-    <div class="section about">
-        <h4>{% nav_item 'About Go Botany' site-about %}</h4>
-    </div>
-    <div class="section contributors">
-        <h4>{% nav_item 'Contributors' site-contributors %}</h4>
-    </div>
-    <div class="section privacy">
-        <h4>{% nav_item 'Privacy Policy' site-privacy %}</h4>
-    </div>
-    <div class="section terms-of-use">
-        <h4>{% nav_item 'Terms of Use' site-terms-of-use %}</h4>
-    </div>
-    <div class="section contact">
-        <h4>{% nav_item 'Contact Us' site-contact %}</h4>
-    </div>
+{% load gobotany_tags %}
+    <nav>
+        <ul>
+            <li class="help">{% nav_item 'Help' site-help %}</li>
+            <li class="getting-started">{% nav_item 'Getting Started with the Simple Key' site-getting-started %}</li>
+            <li class="video">{% nav_item 'Video Help Topics' site-video %}</li>
+            <li class="advanced-map">{% nav_item 'Advanced Map to Groups' site-advanced-map %}</li>
+            <li class="dkey">{% nav_item "What’s a Dichotomous Key?" site-help-dkey %}</li>
+            <li class="glossary">{% nav_item 'Glossary' site-glossary 'a' %}</li>
+            <li class="advanced-id-tools">{% nav_item 'Advanced ID Tools' advanced-id-tools %}</li>
+            <li class="about">{% nav_item 'About Go Botany' site-about %}</li>
+            <li class="contributors">{% nav_item 'Contributors' site-contributors %}</li>
+            <li class="privacy">{% nav_item 'Privacy Policy' site-privacy %}</li>
+            <li class="terms-of-use">{% nav_item 'Terms of Use' site-terms-of-use %}</li>
+            <li class="contact">{% nav_item 'Contact Us' site-contact %}</li>
+        </ul>
+    </nav>
