--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -285,17 +285,17 @@ p.meta + p { margin-top: 2px; }
 
 /* Navigation highlighting */
 /* Global navigation (header) */
-body#home nav li.home { background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent; text-decoration: none; }
-body.simple nav li.simple { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
-body.plantshare nav li.plantshare { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
-body.full nav li.full { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
-body.dkey nav li.dkey { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
-body.teaching nav li.teaching { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
-body.help nav li.help { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body#home header nav li.home { background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent; text-decoration: none; }
+body.simple header nav li.simple { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body.plantshare header nav li.plantshare { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body.full header nav li.full { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body.dkey header nav li.dkey { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body.teaching header nav li.teaching { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body.help header nav li.help { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
 
 /* Section navigation (sidebar, only in some sections) */
 body { /* Place "you are here" marker next to a non-linked item. This is the top level of each sub-section. */ /* Handle pages beneath subsections so they will have a "you are here" marker. Each of these must be set up individually where needed. */ }
-body.help #sidebar h4 a:not([href])::before, body.plantshare #sidebar h4 a:not([href])::before, body.legal #sidebar h4 a:not([href])::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
+body.help #sidebar nav li a:not([href])::before, body.plantshare #sidebar nav li a:not([href])::before, body.legal #sidebar nav li a:not([href])::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 body.help#glossary #sidebar .glossary a::before, body.help#fullkey-placeholder #sidebar .advanced-id-tools a::before, body.help#dkey-placeholder #sidebar .advanced-id-tools a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 body.plantshare#sighting #sidebar .sightings a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 
@@ -328,7 +328,7 @@ header nav #search-suggest .menu span { font-weight: normal; }
 /* Main content and sidebar */
 .content { padding: 8px 0 0; }
 .content .container { margin: 0 auto; padding: 0 10px; width: 960px; }
-.content #main { background: url(/static/images/layout/sidebar-bg.png) repeat-y; float: right; min-height: 520px; padding-bottom: 24px; padding-left: 250px; width: 710px; }
+.content #main { background: url(/static/images/layout/sidebar-bg.png) repeat-y; float: right; min-height: 545px; padding-bottom: 24px; padding-left: 250px; width: 710px; }
 .content #main .smallscreen-anchor-nav { display: none; }
 .content .container.free-sidebar #main { background: none; }
 .content .container.free-sidebar #sidebar { border-top: 0; height: auto; padding: 0; }
@@ -351,6 +351,8 @@ header nav #search-suggest .menu span { font-weight: normal; }
 .content #sidebar a.view-map-btn:hover { background-position: 0 -32px; }
 .content #sidebar a.view-map-btn:active { background-position: 0 -64px; }
 .content #sidebar .box { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 16px 0 0; }
+.content #sidebar nav { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 14px; }
+.content #sidebar nav li { margin: 0 0 5px 0; padding: 0 17px 16px; }
 
 /* Footer */
 footer { background: #b4d57f; clear: both; height: 140px; position: relative; width: 100%; }
