--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -91,7 +91,7 @@ $smallscreen-current-section-color: #85c446;
     text-decoration: none;
 }
 
-@mixin highlight-section-nav {
+@mixin highlight-sidebar-nav-item {
     color: #000;
 	content: "\25b8";
 	margin-left: -15px;
@@ -255,37 +255,37 @@ p.meta {
 /* Global navigation (header) */
 body {
     &#home {
-        nav li.home {
+        header nav li.home {
             @include highlight-global-nav-home;
         }
     }
     &.simple {
-        nav li.simple {
+        header nav li.simple {
             @include highlight-global-nav;
         }
     }
     &.plantshare {
-        nav li.plantshare {
+        header nav li.plantshare {
             @include highlight-global-nav;
         }
     }
     &.full {
-        nav li.full {
+        header nav li.full {
             @include highlight-global-nav;
         }
     }
     &.dkey {
-        nav li.dkey {
+        header nav li.dkey {
             @include highlight-global-nav;
         }
     }
     &.teaching {
-        nav li.teaching {
+        header nav li.teaching {
             @include highlight-global-nav;
         }
     }
     &.help {
-        nav li.help {
+        header nav li.help {
             @include highlight-global-nav;
         }
     }
@@ -296,8 +296,8 @@ body {
     /* Place "you are here" marker next to a non-linked item. This is
      * the top level of each sub-section. */
     &.help, &.plantshare, &.legal {
-        #sidebar h4 a:not([href])::before {
-            @include highlight-section-nav;
+        #sidebar nav li a:not([href])::before {
+            @include highlight-sidebar-nav-item;
         }
     }
     /* Handle pages beneath subsections so they will have a "you are
@@ -307,12 +307,12 @@ body {
         &#glossary #sidebar .glossary a::before,
         &#fullkey-placeholder #sidebar .advanced-id-tools a::before,
         &#dkey-placeholder #sidebar .advanced-id-tools a::before {
-            @include highlight-section-nav;
+            @include highlight-sidebar-nav-item;
         }
     }
     &.plantshare {
         &#sighting #sidebar .sightings a::before {
-            @include highlight-section-nav;
+            @include highlight-sidebar-nav-item;
         }
     }
 }
@@ -463,7 +463,7 @@ header {
     #main {
         background: url(/static/images/layout/sidebar-bg.png) repeat-y;
         float: right;
-        min-height: 520px;
+        min-height: 545px;
         padding-bottom: 24px;
         padding-left: 250px;
         width: 710px;
@@ -565,6 +565,14 @@ header {
             border: 1px solid $border-green;
             margin-bottom: $sidebar-box-vertical-padding;
             padding: $sidebar-box-vertical-padding 0 0;
+        }
+        nav {
+            font-family: $headings-font;
+            font-size: 14px;
+            li {
+                margin: 0 0 5px 0;
+                padding: 0 17px 16px;
+            }
         }
     }
 }
