Move styles for the legal pages into Help where the pages now are.

--- a/gobotany/site/templates/gobotany/privacy.html
+++ b/gobotany/site/templates/gobotany/privacy.html
@@ -2,7 +2,7 @@
 
 {% block title %}Privacy Policy{% endblock %}
 
-{% block body_attributes %}id="privacy-policy" class="legal"{% endblock %}
+{% block body_attributes %}id="privacy-policy" class="help legal"{% endblock %}
 
 {% block main_content %}
                     <h1>Privacy Policy</h1>
