--- a/gobotany/site/templates/gobotany/terms.html
+++ b/gobotany/site/templates/gobotany/terms.html
@@ -2,7 +2,7 @@
 
 {% block title %}Terms of Use{% endblock %}
 
-{% block body_attributes %}id="terms-of-use" class="legal"{% endblock %}
+{% block body_attributes %}id="terms-of-use" class="help legal"{% endblock %}
 
 {% block js_require %}
     require(['util/mailto'], function (mailto) {
