--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -295,7 +295,7 @@ body {
 body {
     /* Place "you are here" marker next to a non-linked item. This is
      * the top level of each sub-section. */
-    &.help, &.plantshare, &.legal {
+    &.help, &.plantshare {
         #sidebar nav li a:not([href])::before {
             @include highlight-sidebar-nav-item;
         }
@@ -1100,7 +1100,6 @@ body.teaching #main li {
 @import "dkey";
 @import "search";
 @import "help";
-@import "legal";
 @import "popups";
 
 /* Finally, include global media queries for smartphones and tablets. These
