--- a/gobotany/site/templates/gobotany/species_list.html
+++ b/gobotany/site/templates/gobotany/species_list.html
@@ -34,7 +34,7 @@
                                 href="{% url taxa-species name_parts.0 name_parts.1 %}">
                                     {{ plant.scientific_name|italicize_plant|safe }}
                             </a></td>
-                            <td>{{ plant.common_names__common_name }}</td>
+                            <td>{{ plant.common_names|join:";<br>" }}</td>
                             <td>{{ plant.family__name }}</td>
                             <td>{{ plant.distribution|replace:"|, " }}</td>
                             <td>
