Change wording of a link to echo the Post a Sighting task.

--- a/gobotany/plantshare/templates/new_sighting_done.html
+++ b/gobotany/plantshare/templates/new_sighting_done.html
@@ -11,7 +11,7 @@
 
 {% url ps-sighting request.GET.s as sighting_url %}
 <p>You can <a href="{{ sighting_url }}">review your sighting</a>
-or <a href="{% url ps-new-sighting %}">add another</a>.</p>
+or <a href="{% url ps-new-sighting %}">post another sighting</a>.</p>
 
 {% endblock %}
 
