--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -297,7 +297,7 @@ body.plantshare {
             }
         }
     }
-    &#locator {
+    &#locator #main {
         h3 {
             font-family: $body-font;
             font-size: 12px;
