Add the ability to submit a question. (#351)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -10,7 +10,7 @@
             
             <li class="sightings-locator">{% nav_item 'Sightings Locator' ps-sightings-locator %}</li>
             <li class="sightings">{% nav_item 'Recent Sightings' ps-sightings %}</li>
-            <li class="ask">{% nav_item 'Ask the Botanist' ps-ask %}</li>
+            <li class="ask">{% nav_item 'Ask the Botanist' ps-questions %}</li>
             
             {% if user.is_authenticated %}
                 <li class="profile">{% nav_item 'My Profile' ps-profile %}</li>
