After asking a question, link to recently asked questions. (#351)

--- a/gobotany/plantshare/templates/ask.html
+++ b/gobotany/plantshare/templates/ask.html
@@ -21,7 +21,7 @@ all visitors can see the answers.</p>
     <button class="submit">Submit</button>
 </form>
 
-<h2>Recently Answered Questions</h2>
+<h2 id="recent">Recently Answered Questions</h2>
 
 <dl>
     {% for question in questions %}
