--- a/gobotany/plantshare/templates/new_question_done.html
+++ b/gobotany/plantshare/templates/new_question_done.html
@@ -10,7 +10,7 @@
 <p>Thank you for asking your question. The botanist will review your question
 and post an answer on the site.</p>
 
-<p><a href="{% url ps-questions %}">Ask another question</a></p>
+<p><a href="{% url ps-questions %}#recent">Recently answered questions</a></p>
 
 {% endblock %}
 
