Adjust text on the question-submitted page. (#351)

--- a/gobotany/plantshare/templates/new_question_done.html
+++ b/gobotany/plantshare/templates/new_question_done.html
@@ -7,10 +7,10 @@
 {% block main_content %}
 <h1>Question Submitted</h1>
 
-<p>Thank you for asking your question. The botanist will review your question
+<p>Thank you for asking your question. The botanist will review it
 and post an answer on the site.</p>
 
-<p><a href="{% url ps-questions %}#recent">Recently answered questions</a></p>
+<p><a href="{% url ps-questions %}#recent">Recently Answered Questions</a></p>
 
 {% endblock %}
 
