--- a/gobotany/plantshare/templates/ask.html
+++ b/gobotany/plantshare/templates/ask.html
@@ -26,7 +26,7 @@ all visitors can see the answers.</p>
 <dl>
     {% for question in questions %}
         <dt>{{ question.question }}</dt>
-        <dd>{{ question.answer }}</dd>
+        <dd>{{ question.answer }} ({{ question.answered }})</dd>
     {% endfor %}
 </dl>   
 
