--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -311,7 +311,8 @@ body {
         }
     }
     &.plantshare {
-        &#sighting #sidebar .sightings a::before {
+        &#sighting #sidebar .sightings a::before,
+        &#all-questions #sidebar .ask a::before {
             @include highlight-sidebar-nav-item;
         }
     }
