--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -297,7 +297,7 @@ body.help header nav li.help { background: url(/static/images/layout/active-nav-
 body { /* Place "you are here" marker next to a non-linked item. This is the top level of each sub-section. */ /* Handle pages beneath subsections so they will have a "you are here" marker. Each of these must be set up individually where needed. */ }
 body.help #sidebar nav li a:not([href])::before, body.plantshare #sidebar nav li a:not([href])::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 body.help#glossary #sidebar .glossary a::before, body.help#fullkey-placeholder #sidebar .advanced-id-tools a::before, body.help#dkey-placeholder #sidebar .advanced-id-tools a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
-body.plantshare#sighting #sidebar .sightings a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
+body.plantshare#sighting #sidebar .sightings a::before, body.plantshare#all-questions #sidebar .ask a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 
 /* Header */
 header { height: 120px; }
@@ -1025,11 +1025,12 @@ body.plantshare#ask #main form { clear: left; }
 body.plantshare#ask #main textarea { border: 1px solid #aaaaaa; height: 40px; margin: 0 0 1%; padding: 8px 10px; max-width: 97%; width: 97%; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
 body.plantshare#ask #main .submit { float: right; text-transform: uppercase; }
 body.plantshare#ask #main h2 { clear: both; }
-body.plantshare#ask #main .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
-body.plantshare#ask #main .questions dl { margin: 0; padding: 0; }
-body.plantshare#ask #main .questions dt { font-weight: bold; margin-top: 10px; }
-body.plantshare#ask #main .questions dt:first-child { margin-top: 0; }
-body.plantshare#ask #main .questions dd { margin: 0; }
+body.plantshare.ask #main { /* styles common to Ask the Botanist, questions pages */ }
+body.plantshare.ask #main .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
+body.plantshare.ask #main .questions dl { margin: 0; padding: 0; }
+body.plantshare.ask #main .questions dt { font-weight: bold; margin-top: 10px; }
+body.plantshare.ask #main .questions dt:first-child { margin-top: 0; }
+body.plantshare.ask #main .questions dd { margin: 0; }
 body.plantshare#profile div.section-container { position: relative; }
 body.plantshare#profile div.section-container .save-btn { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -272px -231px; width: 99px !important; height: 32px; font-size: 0; -moz-box-shadow: 0 !important; border: 0 none !important; display: block; text-indent: -9999px; }
 body.plantshare#profile div.section-container .image-modal { background-color: white; border: 5px solid #acac90; display: none; padding: 15px; position: absolute; width: 400px; height: 160px; z-index: 10; }
