--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -94,9 +94,9 @@ $smallscreen-current-section-color: #85c446;
 @mixin highlight-sidebar-nav-item {
     color: #000;
 	content: "\25b8";
-	margin-left: -15px;
+	margin-left: -14px;
     padding-bottom: 5px;
-	padding-right: 7px;
+	padding-right: 5px;
 }
 
 @mixin shadowbox-photo-titles-credits {
@@ -293,11 +293,19 @@ body {
 
 /* Section navigation (sidebar, only in some sections) */
 body {
-    /* Place "you are here" marker next to a non-linked item. This is
-     * the top level of each sub-section. */
     &.help, &.plantshare {
-        #sidebar nav li a:not([href])::before {
-            @include highlight-sidebar-nav-item;
+        #sidebar nav {
+            li {
+                padding-left: 28px;
+            }
+            li:first-child {
+                padding-left: 15px;
+            }
+            /* Place "you are here" marker next to a non-linked item. This is
+             * the top level of each sub-section. */
+            li a:not([href])::before {
+                @include highlight-sidebar-nav-item;
+            }
         }
     }
     /* Handle pages beneath subsections so they will have a "you are
@@ -491,93 +499,94 @@ header {
             width: auto;
         }
     }
-    #sidebar {
-        border-top: 1px solid $border-green;
-        float: left;
-        height: 100%;
-        margin-right: -230px;
-        padding: $sidebar-box-vertical-padding 0 0;
-        width: 230px;
-        .section {
-            padding: 0 17px 16px;
-            h4 {
-                margin: 0 0 5px 0;
-            }
-            h4 + p {
-                margin-top: 0;
-            }
-            &.separate {
-                border-top: 1px solid #e2dfcb;
-                padding-top: $sidebar-box-vertical-padding;
-            }
-            &.plant-map {
-                background: url(/static/images/layout/plant-map.png) 95% 1% no-repeat;
-                padding: 0 25px 16px 16px;
-            }
-            .left {
-                float: left;
-            }
-            p {
-                margin: 0;
-            }
+}
+#sidebar {
+    border-top: 1px solid $border-green;
+    float: left;
+    height: 100%;
+    margin-right: -230px;
+    padding: $sidebar-box-vertical-padding 0 0;
+    width: 230px;
+    .section {
+        padding: 0 17px 16px;
+        h4 {
+            margin: 0 0 5px 0;
         }
-        a {
-            &:not(.jspArrow) {
-                display: inline-block;
-                margin-left: 10px;
-            }
+        h4 + p {
+            margin-top: 0;
+        }
+        &.separate {
+            border-top: 1px solid #e2dfcb;
+            padding-top: $sidebar-box-vertical-padding;
+        }
+        &.plant-map {
+            background: url(/static/images/layout/plant-map.png) 95% 1% no-repeat;
+            padding: 0 25px 16px 16px;
+        }
+        .left {
+            float: left;
+        }
+        p {
+            margin: 0;
+        }
+    }
+    a {
+        &:not(.jspArrow) {
+            display: inline-block;
+            margin-left: 10px;
+        }
+        &:hover {
+            text-decoration: none;
+        }
+        &.video {
+            margin-left: 0;
+        }
+        &.get-help-btn {
+            background: url(/static/images/layout/get-help-btn-orange.png) 0 0 no-repeat transparent;
+            display: block;
+            height: 32px;
+            margin: 10px 0 20px;
+            text-indent: -9000px;
+            width: 104px;
             &:hover {
-                text-decoration: none;
+                background-position: 0 -32px;
             }
-            &.video {
-                margin-left: 0;
-            }
-            &.get-help-btn {
-                background: url(/static/images/layout/get-help-btn-orange.png) 0 0 no-repeat transparent;
-	            display: block;
-	            height: 32px;
-	            margin: 10px 0 20px;
-	            text-indent: -9000px;
-                width: 104px;
-                &:hover {
-	                background-position: 0 -32px;
-                }
-                &:active {
-	                background-position: 0 -64px;
-                }
-            }
-            &.view-map-btn {
-	            background: url(/static/images/layout/view-map-btn-orange.png) 0 0 no-repeat transparent;
-	            display: block;
-	            height: 32px;
-	            margin: 10px 0 20px;
-	            text-indent: -9000px;
-	            width: 113px;
-                &:hover {
-	                background-position: 0 -32px;
-                }
-                &:active {
-	                background-position: 0 -64px;
-                }
+            &:active {
+                background-position: 0 -64px;
             }
         }
-        .box {
-            background: #fff;
-            border: 1px solid $border-green;
-            margin-bottom: $sidebar-box-vertical-padding;
-            padding: $sidebar-box-vertical-padding 0 0;
+        &.view-map-btn {
+            background: url(/static/images/layout/view-map-btn-orange.png) 0 0 no-repeat transparent;
+            display: block;
+            height: 32px;
+            margin: 10px 0 20px;
+            text-indent: -9000px;
+            width: 113px;
+            &:hover {
+                background-position: 0 -32px;
+            }
+            &:active {
+                background-position: 0 -64px;
+            }
         }
-        nav {
-            font-family: $headings-font;
-            font-size: 14px;
-            h3 {
-                margin-bottom: 16px;
-                padding-left: 26px;
-            }
-            li {
-                margin: 0 0 5px 0;
-                padding: 0 17px 16px;
-            }
+    }
+    .box {
+        background: #fff;
+        border: 1px solid $border-green;
+        margin-bottom: $sidebar-box-vertical-padding;
+        padding: $sidebar-box-vertical-padding 0 0;
+    }
+    nav {
+        font-family: $headings-font;
+        font-size: 14px;
+        h3 {
+            margin-bottom: 16px;
+            padding-left: 26px;
+        }
+        li {
+            line-height: 150%;
+            margin: 0 0 4px 0;
+            padding: 0 15px 16px;
         }
     }
 }
