--- a/gobotany/plantshare/templates/ask.html
+++ b/gobotany/plantshare/templates/ask.html
@@ -21,8 +21,7 @@ all visitors can see the answers.</p>
     <button class="submit">Submit</button>
 </form>
 
-<h2>All <a href="{% url ps-all-questions %}">Questions and Answers</a>
-    ({{ all_questions_count }})</h2>
+<h2>All <a href="{% url ps-all-questions %}">Questions and Answers</a></h2>
 
 <h2 id="recent">Recently Answered Questions</h2>
 
