--- a/gobotany/plantshare/templates/all_questions.html
+++ b/gobotany/plantshare/templates/all_questions.html
@@ -2,22 +2,22 @@
 
 {% block title %}Questions and Answers: PlantShare{% endblock %}
 
-{% block body_attributes %}id="all-questions" class="plantshare ask"{% endblock %}
+{% block body_attributes %}id="questions" class="plantshare ask"{% endblock %}
 
 {% block main_content %}
 <h1>Questions and Answers</h1>
 
 {% regroup questions by category as category_list %}
 
-<p>Categories:
-{% for category in category_list %}
-    <a href="#{{ category.grouper|lower }}">{{ category.grouper }}</a>
-    ({{ category.list|length }})
-    {% if not forloop.last %}
-        |
-    {% endif %}
-{% endfor %}
-</p>
+<div id="category-nav">
+    <p>Categories:</p>
+    <ul>
+    {% for category in category_list %}
+        <li><a href="#{{ category.grouper|lower }}">{{ category.grouper }}</a>
+        ({{ category.list|length }})</li>
+        {% endfor %}
+    </ul>
+</div>
 
 {% for category in category_list %}
     <h2 id="{{ category.grouper|lower }}">{{ category.grouper }}</h2>
