--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1029,6 +1029,10 @@ body.plantshare#ask #main form { clear: left; }
 body.plantshare#ask #main textarea { border: 1px solid #aaaaaa; height: 40px; margin: 0 0 1%; padding: 8px 10px; max-width: 97%; width: 97%; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
 body.plantshare#ask #main .submit { float: right; text-transform: uppercase; }
 body.plantshare#ask #main h2 { clear: both; }
+body.plantshare#questions #main { /* Questions and Answers page */ }
+body.plantshare#questions #main #category-nav p { float: left; margin: 2px 0 0; }
+body.plantshare#questions #main #category-nav ul { margin-left: 80px; }
+body.plantshare#questions #main #category-nav li { display: inline; margin-right: 8px; white-space: nowrap; }
 body.plantshare.ask #main { /* styles common to Ask the Botanist, questions pages */ }
 body.plantshare.ask #main .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
 body.plantshare.ask #main .questions dl { margin: 0; padding: 0; }
