Improve questions presentation and navigation. (#351)

--- a/gobotany/plantshare/templates/all_questions.html
+++ b/gobotany/plantshare/templates/all_questions.html
@@ -28,7 +28,7 @@
                     <dt>Question</dt>
                     <dd>{{ question.question }}</dd>
                     <dt>Answer</dt>
-                    <dd>{{ question.answer }} ({{ question.answered }})</dd>
+                    <dd>{{ question.answer }}</dd>
                 </dl>
             </li>
         {% endfor %}
