--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -89,11 +89,7 @@
 <div id="ask">
     <h2>Ask the Botanist</h2>
 
-    <h3>&#8220;Ace&#8221; Acer</h3>
-    <p>Our Ace Botanist is here to help you identify a plant, suggest
-    locations for seeing plants, and provide you with expert scientific
-    guidance on all things in the New England plant kingdom. Registered users
-    can ask questions, all visitors can see the answers.</p>
+    {% include "_ask_botanist_section.html" %}
 </div>
 
 {% endblock %}
